--- a/index.html
+++ b/index.html
@@ -1,11 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Kelly Hady Portfolio</title>
-    </head>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main.css" />
+    <title>Kelly Hady Portfolio</title>
+  </head>
 
-    <body>
-        <h1>Style Guide</h1>
-    </body>
-    
+  <body>
+    <!-- NAVIGATION BAR -->
+    <header>
+      <div class="nav-bar">
+        <ul>
+          <li>
+            <a class="in-text" href="#wwork">Work</a>
+          </li>
+          <li>
+            <a class="in-text" href="#personal_projects">Personal Projects</a>
+          </li>
+          <li>
+            <a class="in-text" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </header>
+    <!-- END OF NAVIGATION BAR -->
+
+    <main>
+      <!-- HERO TITLE-->
+      <div class="hero-image">
+        <div class="hero-title">
+          <h1 class="hero-text">Style Guide</h1>
+        </div>
+      </div>
+      <!-- HERO TITLE-->
+
+      <section>
+        <!--|| LOGO SECTION ||-->
+        <section></section>
+        <!--|| END OF LOGO SECTION ||-->
+
+        <!--|| TYPOGRAPHY ||-->
+        <section>
+          <h3>Typography</h3>
+          <div>
+            <p>GT Walsheim</p>
+          </div>
+          <div>
+            <p>Canela Light</p>
+          </div>
+        </section>
+        <!--|| END OF TYPOGRAPHY SECTION ||-->
+
+        <!--|| ABOUT ME ||-->
+        <section>
+          <div>
+            <h3>Hi! I'm Kelly Hady</h3>
+            <p>
+              I am a designer interested in designing small experiences with big
+              impact
+            </p>
+          </div>
+        </section>
+        <!--|| END OF ABOUT ME SECTION ||-->
+
+        <section>
+          <h2>Interactive Elements</h2>
+
+          <!--|| IN-TEXT LINKS ||-->
+          <section>
+            <h3>In-text Link</h3>
+            <h4>CSS Code:</h4>
+            <p>css selector here</p>
+            <h4>HTML Code:</h4>
+            <code>&lt;a class="in-text" href="#"&gt;Sample Link&lt;/a&gt;</code>
+          </section>
+          <!--|| END OF IN-TEXT LINKS ||-->
+
+          <!--|| NAV LINKS ||-->
+          <section>
+            <h3>Navigation Links</h3>
+            <h4>CSS Code:</h4>
+            <p>css selector here</p>
+            <h4>HTML Code:</h4>
+          </section>
+          <!--|| END OF NAV LINKS ||-->
+        </section>
+      </section>
+    </main>
+  </body>
 </html>
