--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!--|| ABOUT ME ||-->
         <section>
           <div>
-            <h3>Hi! I'm Kelly Hady</h3>
+            <h2>Hi! I'm Kelly Hady</h2>
             <p>
               I am a designer interested in designing small experiences with big
               impact
@@ -85,6 +85,64 @@
             <h4>HTML Code:</h4>
           </section>
           <!--|| END OF NAV LINKS ||-->
+
+          <!--|| SUBMIT BUTTON ||-->
+          <section>
+            <h3>Submit Button</h3>
+            <button class="buttons" type="submit" value="Submit">
+              Say Hi via Email
+            </button>
+          </section>
+          <!-- || END OF SUBMIT BUTTON ||-->
+
+          <section>
+            <h3>Text Input Field with Label</h3>
+            <h4>CSS Code:</h4>
+            <p></p>
+            <h4>HTML Code:</h4>
+            <code>&lt;label for="input-field">Label:&lt;/label&gt;</code>
+            <code>&lt;input type="text" id="input-field"&gt;</code>
+            <form>
+              <div>
+                <input class="input-field" type="text" />
+                <label class="input-field">Search Bar</label>
+              </div>
+            </form>
+          </section>
+          <!--|| END OF INPUT FIELD ||-->
+
+          <!-- || IMAGE AS LINK ||-->-->
+          <section>
+            <h3>Image as a Link</h3>
+            <h4>CSS Code:</h4>
+            <p></p>
+            <h4>HTML Code:</h4>
+            <code
+              >&lt;a class="image" href="#"&gt;&lt;img src="image.jpg"
+              height="500" width="500" title="Image as a Link"
+              alt="Image"&gt;&lt;/a&gt;</code
+            >
+            <div>
+              <a class="image" href="kellyhady.com"
+                ><img
+                  src="img/aurora-jersey-mockup.jpg"
+                  title="Mockup Image"
+                  alt="Jersey Mockup Image"
+              /></a>
+            </div>
+          </section>
+          <!--|| END OF IMAGE AS LINK ||-->
+        </section>
+
+        <section id="text-elements">
+          <h2>Text Elements</h2>
+
+          <!-- || HEADINGS || -->
+          <section>
+            <h3>Headings</h3>
+            <h2>Heading 1</h2>
+            <code>&lt;h1&gt;Heading 1&lt;/h1&gt;</code>
+          </section>
         </section>
       </section>
     </main>
