--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap"
+      rel="stylesheet"
+    />
     <title>Kelly Hady Portfolio</title>
   </head>
 
@@ -42,28 +54,15 @@
 
         <!--|| TYPOGRAPHY ||-->
         <section>
-          <h3>Typography</h3>
+          <h4>Typography</h4>
           <div>
-            <p>GT Walsheim</p>
-          </div>
-          <div>
-            <p>Canela Light</p>
+            <h2>GT Walsheim</h2>
+            <p class="canela">Canela Light</p>
           </div>
         </section>
         <!--|| END OF TYPOGRAPHY SECTION ||-->
 
-        <!--|| ABOUT ME ||-->
-        <section>
-          <div>
-            <h2>Hi! I'm Kelly Hady</h2>
-            <p>
-              I am a designer interested in designing small experiences with big
-              impact
-            </p>
-          </div>
-        </section>
-        <!--|| END OF ABOUT ME SECTION ||-->
-
+        <!-- || INTERACTIVE ELEMENTS ||-->
         <section>
           <h2>Interactive Elements</h2>
 
@@ -111,9 +110,9 @@
           </section>
           <!--|| END OF INPUT FIELD ||-->
 
-          <!-- || IMAGE AS LINK ||-->-->
+          <!-- || IMAGE AS LINK ||-->
           <section>
-            <h3>Image as a Link</h3>
+            <h2>Image as a Link</h2>
             <h4>CSS Code:</h4>
             <p></p>
             <h4>HTML Code:</h4>
@@ -122,8 +121,9 @@
               height="500" width="500" title="Image as a Link"
               alt="Image"&gt;&lt;/a&gt;</code
             >
+            <h4>Element:</h4>
             <div>
-              <a class="image" href="kellyhady.com"
+              <a class="image" href="https://kellyhady.com"
                 ><img
                   src="img/aurora-jersey-mockup.jpg"
                   title="Mockup Image"
@@ -133,17 +133,78 @@
           </section>
           <!--|| END OF IMAGE AS LINK ||-->
         </section>
+      </section>
+      <!-- || END OF INTERACTIVE ELEMENTS ||-->
 
-        <section id="text-elements">
-          <h2>Text Elements</h2>
+      <!-- || TEXT ELEMENTS || -->
 
-          <!-- || HEADINGS || -->
-          <section>
-            <h3>Headings</h3>
-            <h2>Heading 1</h2>
-            <code>&lt;h1&gt;Heading 1&lt;/h1&gt;</code>
-          </section>
+      <section id="text-elements">
+        <h2>Text Elements</h2>
+
+        <!-- || HEADINGS || -->
+        <section>
+          <h4>Headings</h4>
+          <h1>Heading 1</h1>
+          <h2>Heading 2</h2>
+          <h3>Heading 3</h3>
+          <p>Paragraph</p>
+          <code>&lt;h1&gt;Heading 1&lt;/h1&gt;</code>
         </section>
+        <!-- || END OF HEADINGS-->
+
+        <section>
+          <h3>Bio</h3>
+          <h2>Hi, my name is Kelly</h2>
+          <p>
+            I’m a designer based in Vancouver, BC.
+            <br />
+            I believe in user-centric experiences that provide insights to
+            create meaningful design. I believe social issues can be solved
+            through creative problem-solving.
+            <br />
+            Design and communication should not be two separate entities but
+            combined, to create better, more intuitive user experiences.
+          </p>
+        </section>
+      </section>
+      <!-- || END OF TEXT ELEMENTS || -->
+
+      <section>
+        <h2>Colour Palette</h2>
+        <div>
+          <div>
+            <img
+              src="img/Colour-Palette-1.png"
+              width="200"
+              title="Colour Palette - Black"
+              alt="Colour Palette"
+            />
+          </div>
+          <div>
+            <img
+              src="img/Colour-Palette-2.png"
+              width="200"
+              title="Colour Palette - Black"
+              alt="Colour Palette"
+            />
+          </div>
+          <div>
+            <img
+              src="img/Colour-Palette-3.png"
+              width="200"
+              title="Colour Palette - Black"
+              alt="Colour Palette"
+            />
+          </div>
+          <div>
+            <img
+              src="img/Colour-Palette-4.png"
+              width="200"
+              title="Colour Palette - Black"
+              alt="Colour Palette"
+            />
+          </div>
+        </div>
       </section>
     </main>
   </body>
