--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         <!--|| END OF LOGO SECTION ||-->
 
         <!--|| TYPOGRAPHY ||-->
-        <section>
+        <section class="section" id="typography">
           <h4>Typography</h4>
-          <div>
+          <div class="block">
             <h2>GT Walsheim</h2>
             <p class="canela">Canela Light</p>
           </div>
@@ -64,10 +64,10 @@
 
         <!-- || INTERACTIVE ELEMENTS ||-->
         <section>
-          <h2>Interactive Elements</h2>
+          <h2 class="style-guide-heading">Interactive Elements</h2>
 
           <!--|| IN-TEXT LINKS ||-->
-          <section>
+          <section class="section">
             <h3>In-text Link</h3>
             <h4>CSS Code:</h4>
             <p>css selector here</p>
@@ -77,7 +77,7 @@
           <!--|| END OF IN-TEXT LINKS ||-->
 
           <!--|| NAV LINKS ||-->
-          <section>
+          <section class="section">
             <h3>Navigation Links</h3>
             <h4>CSS Code:</h4>
             <p>css selector here</p>
@@ -86,7 +86,7 @@
           <!--|| END OF NAV LINKS ||-->
 
           <!--|| SUBMIT BUTTON ||-->
-          <section>
+          <section class="section">
             <h3>Submit Button</h3>
             <button class="buttons" type="submit" value="Submit">
               Say Hi via Email
@@ -94,7 +94,7 @@
           </section>
           <!-- || END OF SUBMIT BUTTON ||-->
 
-          <section>
+          <section class="section">
             <h3>Text Input Field with Label</h3>
             <h4>CSS Code:</h4>
             <p></p>
@@ -112,23 +112,25 @@
 
           <!-- || IMAGE AS LINK ||-->
           <section>
-            <h2>Image as a Link</h2>
-            <h4>CSS Code:</h4>
-            <p></p>
-            <h4>HTML Code:</h4>
-            <code
-              >&lt;a class="image" href="#"&gt;&lt;img src="image.jpg"
-              height="500" width="500" title="Image as a Link"
-              alt="Image"&gt;&lt;/a&gt;</code
-            >
-            <h4>Element:</h4>
-            <div>
-              <a class="image" href="https://kellyhady.com"
-                ><img
-                  src="img/aurora-jersey-mockup.jpg"
-                  title="Mockup Image"
-                  alt="Jersey Mockup Image"
-              /></a>
+            <h2 class="style-guide-heading">Image as a Link</h2>
+            <div class="section">
+              <h4>CSS Code:</h4>
+              <p></p>
+              <h4>HTML Code:</h4>
+              <code
+                >&lt;a class="image" href="#"&gt;&lt;img src="image.jpg"
+                height="500" width="500" title="Image as a Link"
+                alt="Image"&gt;&lt;/a&gt;</code
+              >
+              <h4>Element:</h4>
+              <div>
+                <a class="image" href="https://kellyhady.com"
+                  ><img
+                    src="img/aurora-jersey-mockup.jpg"
+                    title="Mockup Image"
+                    alt="Jersey Mockup Image"
+                /></a>
+              </div>
             </div>
           </section>
           <!--|| END OF IMAGE AS LINK ||-->
@@ -142,13 +144,21 @@
         <h2>Text Elements</h2>
 
         <!-- || HEADINGS || -->
-        <section>
+        <section class="section">
           <h4>Headings</h4>
           <h1>Heading 1</h1>
           <h2>Heading 2</h2>
           <h3>Heading 3</h3>
           <p>Paragraph</p>
-          <code>&lt;h1&gt;Heading 1&lt;/h1&gt;</code>
+          <code
+            >&lt;h1&gt;Heading 1&lt;/h1&gt;
+            <br />
+            &lt;h2&gt;Heading 2&lt;/h2&gt;
+            <br />
+            &lt;h3&gt;Heading 3&lt;/h3&gt;
+            <br />
+            &lt;p&gt;Paragraph&lt;/p&gt;
+          </code>
         </section>
         <!-- || END OF HEADINGS-->
 
@@ -169,7 +179,7 @@
       </section>
       <!-- || END OF TEXT ELEMENTS || -->
 
-      <section>
+      <section class="container">
         <h2>Colour Palette</h2>
         <div>
           <div>
